--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,51 +8,38 @@ version = "0.0.1"
 description = "CCA Software Group programming tutorials"
 requires-python = ">=3.10"
 
-[project.optional-dependencies]
-test = [
+dependencies = [
+    "numpy",
+    "matplotlib",
+    "astropy",
+    "numba",
+    "snakeviz",
+    "jupyterlab",
+    "notebook",
+    "ipykernel",
     "pytest",
-    "coverage",
-    "coverage-badge",
 ]
+
+[project.optional-dependencies]
 docs = [
     "sphinx",
     "sphinx-automodapi",
-    "sphinx_rtd_theme",
+    "sphinx_book_theme",
     "sphinxcontrib-fulltoc",
     "nbsphinx",
     "jupyter_client",
     "ipykernel",
+    "myst_parser",
 ]
 coding_standards = [
     "ruff",
 ]
-type_checking = [
-    "mypy",
-]
-dev = ["short_tutorials[test, docs, coding_standards]"]
+
+dev = ["short_tutorials[docs, coding_standards]"]
 
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
 
-[tool.setuptools.packages.find]
-
-[tool.pytest.ini_options]
-testpaths = [
-  "test",
-  "docs",
-]
-
-[tool.mypy]
-exclude = [
-  "docs",
-]
-explicit_package_bases = "True"
-
-[tool.coverage.run]
-omit = [
- "short_tutorials/__init*",
- "*/short_tutorials/__init*",
- "test/*",
- "*/test/*",
-]
+# [tool.setuptools.packages.find]
+# explicit_package_bases = true
