add julia install to workflow
Added setup for Julia and installation of Jupyter kernel.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,6 +35,15 @@ jobs:
           pip install setuptools --upgrade
           pip install .[test,docs]
 
+      - name: Set up Julia
+        uses: julia-actions/setup-julia@v1
+        with:
+          version: '1.11'
+      
+      - name: Install Julia kernel for Jupyter
+        run: |
+          julia -e 'using Pkg; Pkg.add("IJulia"); using IJulia; IJulia.installkernel("Julia 1.11")'
+    
       - name: Make docs
         run: |
           cd docs
